--- a/src/main/webapp/css/theme/css/style.css
+++ b/src/main/webapp/css/theme/css/style.css
@@ -637,6 +637,7 @@ input:-webkit-autofill, input:-webkit-autofill:hover, input:-webkit-autofill:foc
 
 .mbr-section-full {
   position: fixed;
+  top:0px;
   display: table;
   height: 100vh;
   padding-bottom: 0;
